# colmap-DatabaseReader

./: CMakeLists.txt  README.md  database_reader.cc
include/: database.h  sqlite3_utils.h  type_utils.h
src/: database.cc
